--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 
 <canvas></canvas>
 
+<script src="js/placementTilesData.js"></script>
 <script src="js/waypoints.js"></script>
+<script src="js/classes.js"></script>
 <script src="js/index.js"></script>
