--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap"
+  rel="stylesheet"
+/>
 <style>
   body {
     background-color: black;
+    font-family: 'Changa One', cursive;
   }
 </style>
 
-<canvas></canvas>
+<div style="position: relative; display: inline-block">
+  <canvas></canvas>
+  <div
+    id="gameOver"
+    style="
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      font-size: 72px;
+      color: white;
+      -webkit-text-stroke: 3px black;
+    "
+  >
+    GAME OVER
+  </div>
+</div>
 
 <script src="js/placementTilesData.js"></script>
 <script src="js/waypoints.js"></script>
