--- a/index.html
+++ b/index.html
@@ -95,5 +95,9 @@
 
 <script src="js/placementTilesData.js"></script>
 <script src="js/waypoints.js"></script>
-<script src="js/classes.js"></script>
+<script src="js/classes/Sprite.js"></script>
+<script src="js/classes/Building.js"></script>
+<script src="js/classes/Enemy.js"></script>
+<script src="js/classes/PlacementTile.js"></script>
+<script src="js/classes/Projectile.js"></script>
 <script src="js/index.js"></script>
